[project]
name = "hard"
version = "0.0.1"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["dev-requirements.txt"] } }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"